<resources>
    <string name="app_name">ScholarsApp</string>
    <string name="quiz_app">Quiz App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thumb_link">https://drive.google.com/uc?export=download&amp;id=</string>
    <string name="deadline">Deadline:</string>

    <!--Sign In page text-->
    <string name="sigin_text_almost_there">Almost there, Sign In to continue</string>


    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <string name="details_page_email">example@gmail.com</string>
    <string name="details_page_name">Name</string>
    <string name="details_page_slack_handle">Slack Handle</string>
    <string name="details_page_next_btn">Next</string>
    <string name="details_page_change_photo">Change Profile Photo</string>
    <string name="details_page_select_track">Select Your Track</string>
    <string name="details_page_setup_profile">Setup Profile</string>
    <string-array name="details_page_track_spinner">
        <item>Select Your Track</item>
        <item>Android Developer</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">********</string>

    <!-- Profile UI Page -->
    <string name="btn_submit">Submit</string>
    <string name="slack_handle_hint">Your slack handle</string>
    <string name="name_hint">Your name</string>
    <string name="scholars_18">Google Udacity Scholars</string>
    <string name="email">Email</string>
    <string name="slack">Slack Handle</string>
    <string name="track">Scholarship Track</string>

    <!-- Quizzes List Item helper strings -->
    <string name="creator_label">Creator :</string>
    <string name="status_label">Status :</string>
    <string name="difficulty_label">Difficulty Level :</string>
    <string name="bookmark_description">bookmark quiz</string>
    <string name="unattempted">Unattempted</string>
    <string name="total_label">Total :</string>
    <string name="logout">Logout</string>
    <string name="quiz_list">QuizList</string>
    <string name="old_quizzes">Old Quizzes</string>
    <string name="new_label">New</string>
    <string name="dummy_quiz_name">Lesson 5 Quiz1 - Intents</string>
    <string name="dummy_date_created">22 April 2018</string>
    <string name="dummy_creator_name">Dummy Moderator</string>
    <string name="dummy_deadline">None</string>
    <string name="dummy_status">Completed</string>
    <string name="dummy_quiz_level">Hard</string>

    <string name="google_web_client_id" translatable="false">897350396907-p9alch81qro22j44741h668glbn7uqic.apps.googleusercontent.com</string>
    <string name="text_please_wait">Please wait…</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="unable_to_login">Unable to login with this account</string>
    <string name="text_proceed">Proceed >> </string>
    <string name="error_uploading_picture">Error while uploading profile picture. Please try again later.</string>
    <string name="profile_saved_successfully">Logged in successfully</string>


    <!-- NotificationActivity Helper Strings  -->
    <string name="notification_activity_title">Notifications</string>
    <string name="notification_tab_1">New Quiz</string>
    <string name="notification_tab_2">Deadlines</string>
    <string name="notification_tab_3">Resources</string>

    <!-- Notification Tab 1 Strings -->
    <string name="tab1_quiz_name">Quiz Name</string>
    <string name="tab1_quiz_date">22 April 2018</string>
    <string name="tab1_quiz_description">Hi a new quiz for session 2 is out.Please do checkout and attempt it.The deadline for this quiz is 20 april 2018.</string>
    <!-- Notification Tab 1 Strings -->

    <!-- Notification Tab 2 Strings -->
    <string name="tab2_deadline_name">Deadline Title</string>
    <string name="tab2_deadline_date">22 April 2018</string>
    <string name="tab2_deadline_description">Hi the deadline for quiz from session 4 is approaching soon.Please do checkout and attempt it.</string>
    <!-- Notification Tab 2 Strings -->

    <!-- Notification Tab 3 Strings -->
    <string name="tab3_resource_name">Resource Name</string>
    <string name="tab3_resource_date">22 April 2018</string>
    <string name="tab3_resource_description">Hi a new resource has been shared by Vishal Sehgal from session 2.Please do have a look.</string>
    <!-- Notification Tab 3 Strings -->

    <!-- NotificationDetail Activity Strings -->
    <string name="notification_detail_name">Notification Name</string>
    <string name="notification_detail_date">15 April 2018</string>
    <string name="notification_detail_description">Lorem ipsum dolor sit amet, eu mea feugiat gloriatur, dicit scripserit ex qui. Tantas accumsan eligendi et pri, te cibo dolores evertitur sed, consequat adipiscing voluptatum cu pro. Ei nam iudico percipit perfecto. Tation populo repudiare ex quo, sit appetere electram et, id debitis splendide vis.</string>
    <string name="notification_detail_activity_title">NotificationDetail</string>
    <string name="notification_detail_title_new_quiz">New Quiz Launched</string>
    <string name="notification_detail_title_deadline">Deadline Approaching</string>
    <string name="notification_detail_title_resource">New Resource Shared</string>
    <!-- NotificationDetail Activity Strings -->

    <!-- Values for home_quiz_list_filter.xml -->
    <string name="radio_quiz_filter_all">All</string>
    <string name="radio_quiz_filter_attempted">Attempted</string>
    <string name="radio_quiz_filter_un_attempted">Un-attempted</string>
    <string name="radio_quiz_filter_bookmarks">Bookmarks</string>

    <string name="track_android_dev">Android Developer Track</string>
    <string name="msg_login_successful">Login successful</string>
    <string name="txt_status_completed">Completed</string>
    <string name="txt_status_pending">Not started</string>
    <string name="txt_deadline_none">NONE</string>

    <!--Navigation Drawer Menu Items-->
    <string name="scoreboard">Scoreboard</string>
    <string name="quizlist">QuizList</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="notifications">Notifications</string>
    <string name="resources">Resources</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="name">Vishal Sehgal</string>
    <string name="emailid">sehgalvishal31@gmail.com</string>

    <!--Unread Notification-->
    <string name="newnotification">15</string>
    <string name="number">10</string>

    <!--Settings Fragment Strings-->

    <string name="sign_out_title">Are you sure?</string>
    <string name="sign_out_ok">Yes</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="sign_out_message">This will sign you out from this device</string>

    <!-- Keys -->
    <string name="get_notification_key">get_notification</string>
    <string name="theme_list_key">theme_list</string>
    <string name="sign_out_key">sign_out</string>

    <string name="theme_option_dark">Dark</string>
    <string name="theme_option_light">Light</string>

    <string name="get_notifications_title">Get notifications</string>
    <string name="get_notification_summary">Enable to receive notifications for quizzes</string>
    <string name="theme_list_label">Theme</string>
    <string name="sign_out">Sign out</string>


    <!--Quiz Discussion Screen-->
    <string name="title_activity_quiz_discussion">Help/ Discussion</string>

    <string name="refreshed">Refreshed!</string>

    <string name="subjective_hint">Enter your answer here</string>
    <string name="invalid_input_provided">Invalid parameter provided while launching quiz.</string>
    <string name="quiz_submit_confirmation_msg">Are you sure you want submit your response for this quiz?</string>
    <string name="quiz_submit_confirmation_title">Submit response?</string>
    <string name="user_confirmation_yes">Yes</string>
    <string name="user_confirmation_cancel">Cancel</string>
    <string name="quiz_summary_msg">Here is your score</string>
    <string name="quiz_review_confirmation">Review</string>
    <string name="quiz_dismiss_confirmation_msg">Are you sure you want to QUIT? All your responses will be lost.</string>
    <string name="quiz_dismiss_confirmation_title">Quitting the quiz?</string>


    <!-- Values for activity_quiz_details.xml -->
    <string name="toolbar_title">Quiz Details</string>
    <string name="label_author">Author :</string>
    <string name="dummy_author">Vishal Sehgal</string>
    <string name="label_released">Released on :</string>
    <string name="label_deadline">DEADLINE :</string>
    <string name="dummy_deadline_date">14 May 2018</string>
    <string name="dummy_about">This Quiz is all about intents. Intents are used to signal to the Android system that a certain event has occurred. Intents often describe the action which should be performed and provide data upon which such an action should be done.</string>
    <string name="your_score">Your Score</string>
    <string name="quiz_status">Unattempted</string>

    <!-- Home Screen Back Button -->
    <string name="home_back_btn_msg">Press back again to exit.</string>
    <string name="no_items_to_display">No notifications to display</string>

    <!--Details Screen Errors-->
    <string name="user_name_empty_error">Enter your name</string>
    <string name="slack_handle_empty_error">Enter a Valid Slack Handle</string>
    <string name="slack_handle_format_missing">Start with \@</string>
    <string name="select_your_track">Select Your Track</string>
    <string name="user_image_empty">Select a profile photo</string>
    <string name="empty_quiz_list">No quiz for the selected Filter</string>

    <!--Handle Filter Helper Strings-->
    <string name="no_attempted_quizzes">No Attempts Yet!</string>
    <string name="no_bookmarked_quizzes">No Bookmarks!</string>
    <string name="no_un_attempted_quizzes">All Caught Up!</string>

    <string name="type_comment_hint">Type message here</string>
    <string name="msg_under_construction">Feature is under construction</string>


</resources>
