<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/nav_header_height"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/scoreboard_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/scoreboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gadgets" />

    <TextView
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/scoreboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/scoreboard_icon"
        app:layout_constraintStart_toEndOf="@+id/scoreboard_icon"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_icon" />

    <ImageView
        android:id="@+id/quizlist_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/quiz_list"
        app:layout_constraintStart_toStartOf="@+id/scoreboard_icon"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_icon"
        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/quiz_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/quizlist_icon"
        app:layout_constraintStart_toEndOf="@+id/quizlist_icon"
        app:layout_constraintTop_toBottomOf="@+id/quizlist_icon" />

    <ImageView
        android:id="@+id/old_quizzes_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/old_quizzes"
        app:layout_constraintStart_toStartOf="@+id/quizlist_icon"
        app:layout_constraintTop_toBottomOf="@+id/quizlist_icon"
        app:srcCompat="@drawable/ic_content_paste_black_24dp" />

    <TextView
        android:id="@+id/old_quizzes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/old_quizzes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/old_quizzes_icon"
        app:layout_constraintStart_toEndOf="@+id/old_quizzes_icon"
        app:layout_constraintTop_toBottomOf="@+id/old_quizzes_icon" />

    <ImageView
        android:id="@+id/notifications_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/notifications"
        app:layout_constraintStart_toStartOf="@+id/old_quizzes_icon"
        app:layout_constraintTop_toBottomOf="@+id/old_quizzes_icon"
        app:srcCompat="@drawable/ic_notifications_black_24dp" />

    <TextView
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/notifications"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/notifications_icon"
        app:layout_constraintStart_toEndOf="@+id/notifications_icon"
        app:layout_constraintTop_toBottomOf="@+id/notifications_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/resources"
        android:tint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/notifications_icon"
        app:layout_constraintTop_toBottomOf="@+id/notifications_icon"
        app:srcCompat="@drawable/ic_android_black_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/resources"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_udacity" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/app_logo"
        app:layout_constraintStart_toEndOf="@+id/app_logo"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/settings" />

    <TextView
        android:id="@+id/notification_count"
        android:layout_width="36dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/label_border"
        android:backgroundTint="@color/colorAccent"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/notifications"
        app:layout_constraintEnd_toStartOf="@+id/new_quizzes"
        app:layout_constraintStart_toEndOf="@+id/new_quizzes"
        app:layout_constraintTop_toBottomOf="@+id/notifications"
        tools:text="5" />

    <TextView
        android:id="@+id/new_quizzes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/label_border"
        android:backgroundTint="@color/color_red_deadline"
        android:padding="4dp"
        android:text="@string/new_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>