<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/notification_card_margin_end"
    android:layout_marginStart="@dimen/notification_card_margin_start"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardMaxElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/notification_list_items_layout_margin">

        <ImageView
            android:id="@+id/iv_notification_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/notification_profile_margin_bottom"
            android:layout_marginStart="@dimen/notification_profile_margin_start"
            android:layout_marginTop="@dimen/notification_profile_margin_top"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_notification_quiz" />

        <TextView
            android:id="@+id/tv_notification_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/notification_name_margin_end"
            android:layout_marginStart="@dimen/notification_name_margin_start"
            android:layout_marginTop="@dimen/notification_name_margin_top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/notification_list_items_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_notification_date"
            app:layout_constraintStart_toEndOf="@+id/iv_notification_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tab1_quiz_name" />

        <TextView
            android:id="@+id/tv_notification_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/notification_date_margin_end"
            android:layout_marginTop="@dimen/notification_date_margin_top"
            android:ellipsize="end"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/notification_list_items_date_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_notification_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tab1_quiz_date" />

        <TextView
            android:id="@+id/tv_notification_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/notification_description_margin_bottom"
            android:layout_marginEnd="@dimen/notification_description_margin_end"
            android:layout_marginTop="@dimen/notification_description_margin_top"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_notification_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification_name"
            app:layout_constraintVertical_bias="0.333"
            tools:text="@string/tab1_quiz_description" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>